2011-06-25  Robert Larice
 * src/frontend/plotting/graf.c :
   graf.c, swallow type conversion warning

2011-06-25 Holger Vogt
 * main.c, defines.h: improved shutdown message for Windows GUI
 * cpitf.c, ngspice.h, ivars.c, ivars.h, analog/file_source/cfunc.mod:
   Add reading an environmental variable NGSPICE_INPUT to hold a path
   where input files are searched for (in addition to existing search paths),
   e.g. *.cir in -b and interactive mode, include and library files,
   filesource input file.

2011-06-24  Robert Larice
 * src/main.c ,
 * src/frontend/com_ahelp.c ,
 * src/frontend/inpcom.c ,
 * src/frontend/numparam/mystring.c ,
 * src/frontend/numparam/xpressn.c ,
 * src/frontend/trannoise/wallace.c ,
 * src/spicelib/parser/inp2r.c ,
 * src/xspice/icm/analog/file_source/cfunc.mod :
   swallow type conversion warnings

2011-06-24  Robert Larice
 * src/ciderlib/oned/oneprint.c ,
 * src/ciderlib/twod/twoprint.c :
   tiny rewrite, swallow type conversion warnings

2011-06-24  Robert Larice
 * src/frontend/com_sysinfo.c :
   tiny rewrite, swallow type conversion warnings

2011-06-23  Robert Larice
 * src/xspice/mif/mifgetvalue.c :
   tiny rewrite, round to nearest integer and reset errno for strtol()

2011-06-23 Holger Vogt
 * src/xspice/icm/analog/modpath.lst ,
 * src/xspice/icm/analog/file_source/cfunc.mod ,
 * src/xspice/icm/analog/file_source/ifspec.ifs :
   code model with input from file added (T. Sailer)
 * examples/xspice/fstest.sp ,
 * examples/xspice/sine.m :
   test of 'filesource'
 * inpcom.c: bug no. 3317928, patched by Robert

2011-06-23  Robert Larice
 * src/frontend/options.c ,
 * src/frontend/spiceif.c ,
 * src/frontend/variable.c :
   round to nearest integer, `rawfileprec' `numdgt' `history' if_option() doset()

2011-06-23  Robert Larice
 * src/frontend/evaluate.c :
   `[]' indexing operator, round index to nearest integer

2011-06-23  Robert Larice
 * src/xspice/icm/spice2poly/icm_spice2poly/cfunc.mod :
   malloc return value cast
