@@ -1,6 +1,11 @@
 2011-06-25  Robert Larice
+ * src/xspice/ipc/ipc.c ,
+ * src/xspice/ipc/ipcsockets.c :
+   ipc.c and ipcsockets.c, swallow type conversion warnings
+
+2011-06-25  Robert Larice
  * src/frontend/plotting/graf.c :
-   graf.c, swallow type conversion warning
+   graf.c, swallow type conversion warnings
 
 2011-06-25 Holger Vogt
  * main.c, defines.h: improved shutdown message for Windows GUI
